--- a/frontend/src/components/LoginFormModal/LoginForm.css
+++ b/frontend/src/components/LoginFormModal/LoginForm.css
@@ -27,3 +27,11 @@ label, input {
   margin-top:5px;
   
 } 
+
+.log-in-icon {
+  display: flex;
+  font-size: 24px;
+  align-items: center;
+  padding-right: 15px;
+  color: rgb(255, 217, 0);
+}
