--- a/frontend/src/components/PhotoUploadModal/PhotoUpload.css
+++ b/frontend/src/components/PhotoUploadModal/PhotoUpload.css
@@ -1,4 +1,16 @@
 .upload-button {
  display:flex;
  margin-left: 30px;
+ font-size: 30px;
+ align-items: center;
+ padding-bottom: 3px;
+ color:rgb(255, 217, 0)
+
 }
+
+.button-icon {
+ background-color: transparent;
+ display:flex;
+}
+
+
