--- a/frontend/src/components/PhotosPage/PhotosPage.css
+++ b/frontend/src/components/PhotosPage/PhotosPage.css
@@ -12,7 +12,8 @@
 .photo-url {
 object-fit: cover;
 width: 100%;
-height: 100%
+height: 100%;
+border-radius:5%;
 }
 .single-photo {
 width: 300px;
@@ -21,9 +22,26 @@ height:300px;
 
 
 .photoId {
+display: flex;
+flex-direction: column;
+align-items: center;
+text-decoration: none;
+color: rgb(255, 217, 0);
 
 }
 
 .photos {
+display: flex;
+flex-direction: column;
+padding: 50px;
+align-items: center;
 
+}
+
+.photo-content {
+
+ font-size: 25px;
+}
+.userName {
+ font-size: 20px;
 }
