--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -14,7 +14,8 @@
  justify-content: center;
  color: rgb(255, 217, 0);
  padding:10px;
- font-size: 20px;
+ font-size: 25px;
+ font-weight: bolder;
  
 }
 
@@ -24,7 +25,8 @@
  display: flex;
  padding:10px;
  padding-left: 40px;
- font-size: 20px;
+ font-size: 25px;
+ font-weight: bolder;
 }
 
 .modal {
