--- a/frontend/src/components/SignupFormModal/SignupForm.css
+++ b/frontend/src/components/SignupFormModal/SignupForm.css
@@ -5,10 +5,47 @@
 } */
 
 .sign-up-button {
-    font-size: 18px;
-    font-weight: bolder;
-    background-color: black;
-    color: rgb(255, 217, 0);
-    border-radius: 10%;
-    outline: 2px solid rgb(255, 217, 0);
+font-size: 18px;
+font-weight: bolder;
+background-color: black;
+color: rgb(255, 217, 0);
+border-radius: 10%;
+outline: 2px solid rgb(255, 217, 0);
+}
+
+h2 {
+display: flex;
+font-size:35px;
+justify-content: center;
+color: rgb(255, 217, 0);
+text-shadow: -2px 0 black,
+0 2px black,
+2px 0 black,
+0 -2px black;
+}
+h5 {
+display: flex;
+font-size:17px;
+justify-content: center;
+color: rgb(255, 217, 0);
+text-shadow: -1.5px 0 black,
+0 1.5px black,
+1.5px 0 black,
+0 -1.5px black;
+}
+
+.signup-btn-container{
+    display:flex;
+    justify-content: center;
+}
+.signup-btn-subtmit {
+display:flex;
+font-size: 18px;
+font-weight: bolder;
+background-color: black;
+color: rgb(255, 217, 0);
+border-radius: 10%;
+outline: 2px solid rgb(255, 217, 0);
+align-items: center;
+margin-top: 10px;
 }
