--- a/frontend/src/components/LandingPage/LandingPage.css
+++ b/frontend/src/components/LandingPage/LandingPage.css
@@ -22,6 +22,10 @@
  justify-content: center;
  color: rgb(255,217,0);
  font-weight: bolder;
+text-shadow: -2px 0 black,
+0 2px black,
+2px 0 black,
+0 -2px black;
 }
 
 .landing-page-texts {
@@ -30,4 +34,8 @@
   color: rgb(255, 217, 0);
   font-size: 25px;
   font-weight: bolder;
+  text-shadow: -2px 0 black,
+  0 2px black,
+  2px 0 black,
+  0 -2px black;
 }
