--- a/frontend/src/components/LoginFormModal/LoginForm.css
+++ b/frontend/src/components/LoginFormModal/LoginForm.css
@@ -2,6 +2,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    border: solid rgb(255, 217, 0);;
+
 }
 
 .form-container {
@@ -9,16 +11,49 @@
   justify-content: center;
   align-items: center;
   padding: 20px;
+  background-color: slategrey;
 }
 .login-btn {
-  display: flex;
-  justify-content: center;
+    color: rgb(255, 217, 0);
+    background-color: black;
+    font-size: 17px;
+}
+.login-btn-container {
+    display: flex;
+    justify-content: center;
+}
+.login-header {
+  margin-bottom: 10px;
 }
 
-label, input {
+label{
     display: flex;
     flex-direction: column;
     padding: 5px;
+    font-size: 25px;
+    align-items: center;
+    margin-bottom: 5px;
+    color: rgb(255, 217, 0);
+    font-weight:bolder;
+    text-shadow: -1.5px 0 black,
+    0 1.5px black,
+    1.5px 0 black,
+    0 -1.5px black;
+}
+
+input {
+  display: flex;
+  flex-direction: column;
+  padding: 5px;
+  font-size: 20px;
+  align-items: center;
+  border:1px solid;
+  color: rgb(255, 217, 0);
+  text-shadow: -1px 0 black,
+    0 1px black,
+    1px 0 black,
+    0 -1px black;
+  background-color: black;
 }
 
 .Nav-Logbtn{
@@ -34,4 +69,8 @@ label, input {
   align-items: center;
   padding-right: 15px;
   color: rgb(255, 217, 0);
+  text-shadow: -2px 0 black,
+  0 2px black,
+  2px 0 black,
+  0 -2px black;
 }
