--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -16,6 +16,10 @@
  padding:10px;
  font-size: 25px;
  font-weight: bolder;
+ text-shadow: -2px 0 black,
+ 0 2px black,
+ 2px 0 black,
+ 0 -2px black;
  
 }
 
@@ -27,6 +31,10 @@
  padding-left: 40px;
  font-size: 25px;
  font-weight: bolder;
+ text-shadow: -2px 0 black,
+ 0 2px black,
+ 2px 0 black,
+ 0 -2px black;
 }
 
 .modal {
