--- a/frontend/src/components/PhotoUploadModal/PhotoUpload.css
+++ b/frontend/src/components/PhotoUploadModal/PhotoUpload.css
@@ -4,7 +4,11 @@
  font-size: 30px;
  align-items: center;
  padding-bottom: 3px;
- color:rgb(255, 217, 0)
+ color:rgb(255, 217, 0);
+ text-shadow: -2px 0 black,
+ 0 2px black,
+ 2px 0 black,
+ 0 -2px black;
 
 }
 
@@ -14,3 +18,55 @@
 }
 
 
+.add-photo-container {
+ display: flex;
+ width: 500px;
+ height: 250px;
+ background-color: rgba(17, 17, 17, 0.815);
+
+}
+.title {
+color:rgb(255, 217, 0);
+font-size: 30px;
+ text-shadow: -2px 0 black,
+ 0 2.5px black,
+ 2.5px 0 black,
+ 0 -2px black;
+ padding-bottom: 10px;
+}
+
+.add-photo-form{
+ width:100%;
+ height: 100%;
+ display:flex;
+ flex-direction: column;
+ align-items: center;
+}
+
+.upload-add-cancel {
+display: flex;
+padding-top:10px;
+justify-content: space-between;
+}
+
+.add-photo-input {
+ margin-bottom: 10px;
+ border: 2px solid black
+}
+
+.add-photo-button {
+   color: rgb(255, 217, 0);
+   background-color: black;
+   font-size: 17px;
+  
+}
+.cancel-button {
+   color: rgb(255, 217, 0);
+   background-color: black;
+   font-size: 17px;
+}
+
+.choose-file {
+/* margin-left:100px; */
+font-size: 17px;
+}
