--- a/frontend/src/components/PhotosPage/PhotosPage.css
+++ b/frontend/src/components/PhotosPage/PhotosPage.css
@@ -14,6 +14,9 @@ object-fit: cover;
 width: 100%;
 height: 100%;
 border-radius:5%;
+border: 1px solid rgb(255,217,0);
+color: rgb(255, 217, 0);
+box-shadow: 10px 5px 5px black;
 }
 .single-photo {
 width: 300px;
@@ -27,6 +30,10 @@ flex-direction: column;
 align-items: center;
 text-decoration: none;
 color: rgb(255, 217, 0);
+text-shadow: -2px 0 black,
+0 2px black,
+2px 0 black,
+0 -2px black;
 
 }
 
@@ -35,6 +42,7 @@ display: flex;
 flex-direction: column;
 padding: 50px;
 align-items: center;
+padding-top: 70px;
 
 }
 
@@ -45,3 +53,5 @@ align-items: center;
 .userName {
  font-size: 20px;
 }
+
+body {background-color: rgba(36, 32, 32, 0.603);}
