--- a/frontend/src/components/PhotosPage/PhotosPage.css
+++ b/frontend/src/components/PhotosPage/PhotosPage.css
@@ -52,6 +52,11 @@ padding-top: 70px;
 }
 .userName {
  font-size: 20px;
+ color:white;
+ text-shadow: -1px 0 rgb(255, 217, 0),
+ 0 1px rgb(255, 217, 0),
+ 1px 0 rgb(255, 217, 0),
+ 0 -1px rgb(255, 217, 0);
 }
 
-body {background-color: rgba(36, 32, 32, 0.603);}
+body {background-color: rgba(2, 3, 37, 0.925);}
