--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -66,5 +66,44 @@
  flex-direction: row;
  padding:10px;
  justify-content: space-between;
+}
 
+.profile-btn {
+ color: rgb(255, 217, 0);
+ background-color: rgb(0, 0, 0);
+ font-size: 20px;
+ margin-right:20px;
+ border-radius:5%
+}
+
+.profile-dropdown {
+
+ width: 175px;
+ color: rgb(255, 217, 0);
+ margin-top: 120px;
+ margin-right: 20px;
+ border: 1px solid rgb(255, 217, 0);
+ background-color: rgb(0, 0, 0);
+ list-style: none;
+ 
+}
+
+.dropdown-list {
+ display:flex;
+ flex-direction: column;
+ font-size: 20px;
+ padding-left: 20px;
+ padding-bottom:10px;
+ text-shadow: -1px 0 black,
+ 0 1px black,
+ 1px 0 black,
+ 0 -1px black;
+}
+
+.dropdown-delete {
+ color: rgb(255, 217, 0);
+ border:1px solid rgb(255, 217, 0);
+ padding:2px;
+ background-color: black;
+ font-size: 15.5px;
 }
