--- a/frontend/src/components/PhotoDetails/PhotoDetails.css
+++ b/frontend/src/components/PhotoDetails/PhotoDetails.css
@@ -28,6 +28,7 @@ h1 {
  /* margin-left: 100px; */
 }
 .photo-username{
+ margin-top: 20px;
  display: flex;
  font-size:17px;
  justify-content: space-between;
@@ -48,40 +49,42 @@ h1 {
  font-size: 25px;
  width: 100vw;
  margin-top: 100px;
- 
+ /* margin-bottom:300px */
 }
 .comments-contents {
- display:flex;
- flex-direction: column;
- align-items: center;
- border: 2px solid;
- width: 70vw;
+   display:flex;
+   flex-direction: column;
+   align-items: center;
+   border: 2px solid rgb(255, 217, 0);
+   width: 70vw;
 }
 .comments-header {
-color: rgb(255, 217, 0);
-font-size: 30px;
-font-weight: bolder;
-text-shadow: -2px 0 black,
-0 2px black,
-2px 0 black,
-0 -2px black;
+   color: rgb(255, 217, 0);
+   font-size: 30px;
+   font-weight: bolder;
+   text-shadow: -2px 0 black,
+   0 2px black,
+   2px 0 black,
+   0 -2px black;
 }
 
 .comments-box {
+ min-height: 500px;
  display: flex;
  flex-direction: column;
  align-items: center;
- border: 1px solid;
+ border: 2px solid rgb(255, 217, 0);
  width: 70vw;
  
 }
 .all-comments {
  display: flex;
- width:90%;
+ width:95%;
  flex-direction: column;
  font-size: 20px;
- /* border: 5px solid; */
- outline: 1px solid;
+ border: 1px solid rgb(255, 217, 0);
+ background-color: rgba(0, 0, 0, 0.397);
+ margin:20px
 
 }
 
@@ -92,7 +95,13 @@ justify-content: flex-end;
 }
 .comments-list {
  display:flex;
- font-size: 25px;
+ font-size: 20px;
+ color:white;
+text-shadow: -0.5px 0 black,
+0 0.5px rgb(255, 217, 0) ,
+0.5px 0 rgb(255, 217, 0),
+0 -0.5px rgb(255, 217, 0);
+
 }
 .comment-username {
  font-size: 20px;
