--- a/frontend/src/components/PhotoUploadModal/PhotoUpload.css
+++ b/frontend/src/components/PhotoUploadModal/PhotoUpload.css
@@ -22,7 +22,8 @@
  display: flex;
  width: 500px;
  height: 250px;
- background-color: rgba(17, 17, 17, 0.815);
+ background-color: rgba(2, 3, 37, 0.925);
+ border: 2px solid rgb(255, 217, 0)
 
 }
 .title {
@@ -51,19 +52,23 @@ justify-content: space-between;
 
 .add-photo-input {
  margin-bottom: 10px;
- border: 2px solid black
+ border: 1px solid rgb(255, 217, 0);
 }
 
 .add-photo-button {
    color: rgb(255, 217, 0);
    background-color: black;
-   font-size: 17px;
+   font-size: 23px;
+   border: 1px solid rgb(255, 217, 0);
+   border-radius: 5%;
   
 }
-.cancel-button {
+.cancel-add-button {
    color: rgb(255, 217, 0);
+   margin-left:20px;
    background-color: black;
-   font-size: 17px;
+   font-size: 23px;
+   border: 1px solid rgb(255, 217, 0);
 }
 
 .choose-file {
