--- a/frontend/src/components/LandingPage/LandingPage.css
+++ b/frontend/src/components/LandingPage/LandingPage.css
@@ -13,7 +13,9 @@
  background-size:cover;
  background-repeat: no-repeat;
  font-size: 30px;
-
+}
+.signupbutton-landing {
+  list-style: none;
 
 }
 
@@ -26,6 +28,7 @@ text-shadow: -2px 0 black,
 0 2px black,
 2px 0 black,
 0 -2px black;
+
 }
 
 .landing-page-texts {
@@ -34,6 +37,7 @@ text-shadow: -2px 0 black,
   color: rgb(255, 217, 0);
   font-size: 25px;
   font-weight: bolder;
+
   text-shadow: -2px 0 black,
   0 2px black,
   2px 0 black,
