--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -1,11 +1,12 @@
 .navbar{
- background: rgba(0,0,0,0.43);
+ background: rgba(0, 0, 0, 0.644);
  height: 50px;
  width:100vw;
  display:flex;
  justify-content: space-between;
  align-items: center;
  position: absolute;
+ top: 0;
 }
 
 .racer {
