--- a/frontend/src/components/AddComment/AddComment.css
+++ b/frontend/src/components/AddComment/AddComment.css
@@ -2,10 +2,18 @@
   color: rgb(255, 217, 0);
   background-color: black;
   font-size: 17px;
+  margin: 5px;
 }
 
 .cancel-comment-button {
    color: rgb(255, 217, 0);
    background-color: black;
    font-size: 17px;
+   margin: 5px;
+}
+.comments-container {
+  margin-bottom: 100px;
+}
+.add-comment-input {
+  margin-bottom: 10px;
 }
