--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -101,10 +101,11 @@
  0 -1px black;
 }
 
-.dropdown-delete {
+.logout-icon {
  color: rgb(255, 217, 0);
- border:1px solid rgb(255, 217, 0);
  padding:2px;
  background-color: black;
- font-size: 15.5px;
+ font-size: 18px;
+ /* display:flex;
+ justify-content: center; */
 }
