--- a/frontend/src/components/PhotoDetails/PhotoDetails.css
+++ b/frontend/src/components/PhotoDetails/PhotoDetails.css
@@ -49,7 +49,6 @@ h1 {
  font-size: 25px;
  width: 100vw;
  margin-top: 100px;
- /* margin-bottom:300px */
 }
 .comments-contents {
    display:flex;
@@ -57,6 +56,7 @@ h1 {
    align-items: center;
    border: 2px solid rgb(255, 217, 0);
    width: 70vw;
+   margin-bottom:300px;
 }
 .comments-header {
    color: rgb(255, 217, 0);
@@ -73,7 +73,7 @@ h1 {
  display: flex;
  flex-direction: column;
  align-items: center;
- border: 2px solid rgb(255, 217, 0);
+ /* border: 2px solid rgb(255, 217, 0); */
  width: 70vw;
  
 }
@@ -113,6 +113,7 @@ text-shadow: -0.5px 0 black,
 }
 
 .add-comment-input {
+ margin-top: -300px;
  width: 40vw;
  justify-content: center;
 }
@@ -122,7 +123,7 @@ text-shadow: -0.5px 0 black,
 }
 
 .comment-button-delete{
-   color: rgb(255, 217, 0);
-   background-color: black;
-   font-size: 17px;
+color: rgb(255, 217, 0);
+background-color: black;
+font-size: 17px;
 }
