--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -58,8 +58,10 @@
 .nav-links {
  display:flex;
  margin-left: -15px;
-
-
+}
+.profile-container{
+ display:flex;
+ color: rgb(255, 217, 0);
 }
 
 .nav-buttons {
@@ -74,7 +76,8 @@
  background-color: rgb(0, 0, 0);
  font-size: 20px;
  margin-right:20px;
- border-radius:5%
+ border-radius:5%;
+ margin-left: 10px;
 }
 
 .profile-dropdown {
