--- a/frontend/src/components/LoginFormModal/LoginForm.css
+++ b/frontend/src/components/LoginFormModal/LoginForm.css
@@ -21,6 +21,10 @@
     border-radius: 10%;
     outline: 2px solid rgb(255, 217, 0);
 }
+
+.fa.fa-sign-in:hover {
+  color: white;
+}
 .login-btn-container {
     display: flex;
     justify-content: center;
