--- a/frontend/src/components/PhotoDetails/PhotoDetails.css
+++ b/frontend/src/components/PhotoDetails/PhotoDetails.css
@@ -18,7 +18,7 @@ h1 {
  width:70vw;
  display:flex;
  justify-content: center;
- border-radius: 5%;
+ /* border-radius: 5%; */
  border: 1px solid rgb(255, 217, 0);
  box-shadow: 10px 8px 8px black;
 }
