--- a/frontend/src/components/PhotosPage/PhotosPage.css
+++ b/frontend/src/components/PhotosPage/PhotosPage.css
@@ -14,10 +14,13 @@
 object-fit: cover;
 width: 100%;
 height: 100%;
-border-radius:5%;
+/* border-radius:5%; */
 border: 1px solid rgb(255,217,0);
 color: rgb(255, 217, 0);
 box-shadow: 10px 5px 5px black;
+}
+.photo-url:hover {
+ box-shadow: 10px 5px 5px white;
 }
 .single-photo {
 width: 300px;
