--- a/frontend/src/components/SignupFormModal/SignupForm.css
+++ b/frontend/src/components/SignupFormModal/SignupForm.css
@@ -12,6 +12,9 @@ color: rgb(255, 217, 0);
 border-radius: 10%;
 outline: 2px solid rgb(255, 217, 0);
 }
+.sign-up-button:hover {
+color: white;
+}
 
 h2 {
 display: flex;
