--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -3,9 +3,7 @@ html {
     padding:0px;
   height:100%;
   width:100%;
-  font-family: "Comic Sans MS",
-  "Comic Sans",
-  cursive;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
 }
 body {
   margin:0px;
