--- a/frontend/src/components/AddComment/AddComment.css
+++ b/frontend/src/components/AddComment/AddComment.css
@@ -3,6 +3,10 @@
   background-color: black;
   font-size: 17px;
   margin: 5px;
+  border: 1px solid rgb(255, 217, 0);
+}
+.add-comment-button:hover {
+  color:white;
 }
 
 .cancel-comment-button {
@@ -10,6 +14,10 @@
    background-color: black;
    font-size: 17px;
    margin: 5px;
+  border: 1px solid rgb(255, 217, 0);
+}
+.cancel-comment-button:hover{
+  color:white
 }
 
 .add-comment-input {
