--- a/frontend/src/components/PhotoDetails/PhotoDetails.css
+++ b/frontend/src/components/PhotoDetails/PhotoDetails.css
@@ -40,6 +40,11 @@ h1 {
  color: rgb(255, 217, 0);
  background-color: black;
  font-size: 17px;
+ margin-left:5px;
+ border: 1px solid rgb(255, 217, 0)
+}
+.photo-delete-button:hover {
+   color:white
 }
 
 .comments-container {
@@ -95,6 +100,9 @@ display: flex;
 align-items:center;
 justify-content: flex-end;
 }
+.edit-delete-comment:hover {
+
+}
 .comments-list {
  display:flex;
  font-size: 20px;
@@ -128,4 +136,8 @@ text-shadow: -0.5px 0 black,
 color: rgb(255, 217, 0);
 background-color: black;
 font-size: 17px;
+margin-left: 5px;
+}
+.comment-button-delete:hover{
+   color: white;
 }
