--- a/frontend/src/components/EditComment/EditComment.css
+++ b/frontend/src/components/EditComment/EditComment.css
@@ -1,8 +1,31 @@
 .comment-edit-button {
-    color: rgb(255, 217, 0);
-    background-color: black;
-    font-size: 17px;
+color: rgb(255, 217, 0);
+background-color: black;
+font-size: 17px;
 }
 .comment-edit-button:hover {
-    color:white
+color:white
+}
+
+.edit-comment-submit {
+color: rgb(255, 217, 0);
+border: 1px solid rgb(255, 217, 0);
+background-color: black;
+font-size: 15px;
+margin-left: 5px;
+margin-right: 5px;
+}
+
+.edit-comment-submit:hover {
+color: white;
+}
+
+.edit-comment-cancel {
+color: rgb(255, 217, 0);
+border: 1px solid rgb(255, 217, 0);
+background-color: black;
+font-size: 15px;
+}
+.edit-comment-cancel:hover{
+color:white;
 }
