--- a/frontend/src/components/PhotoUploadModal/PhotoUpload.css
+++ b/frontend/src/components/PhotoUploadModal/PhotoUpload.css
@@ -11,7 +11,7 @@
  0 -2px black;
 }
 .upload-button:hover {
-   color:white;
+color:white;
 }
 
 .button-icon {
@@ -58,21 +58,27 @@ justify-content: space-between;
 }
 
 .add-photo-button {
-   color: rgb(255, 217, 0);
-   background-color: black;
-   font-size: 18px;
-   border: 1px solid rgb(255, 217, 0);
-   border-radius: 5%;
-  
+color: rgb(255, 217, 0);
+background-color: black;
+font-size: 18px;
+border: 1px solid rgb(255, 217, 0);
+border-radius: 5%;
 }
-.cancel-add-button {
-   color: rgb(255, 217, 0);
-   margin-left:20px;
-   background-color: black;
-   font-size: 18px;
-   border: 1px solid rgb(255, 217, 0);
+.add-photo-button:hover {
+color:white
 }
 
+
+.cancel-add-button {
+color: rgb(255, 217, 0);
+margin-left:20px;
+background-color: black;
+font-size: 18px;
+border: 1px solid rgb(255, 217, 0);
+}
+.cancel-add-button:hover {
+color:white
+}
 .choose-file {
 /* margin-left:100px; */
 font-size: 17px;
