--- a/frontend/src/components/AddComment/AddComment.css
+++ b/frontend/src/components/AddComment/AddComment.css
@@ -4,9 +4,11 @@
   font-size: 17px;
   margin: 5px;
   border: 1px solid rgb(255, 217, 0);
+  border-radius: 5px;
 }
 .add-comment-button:hover {
   color:white;
+  cursor: pointer;
 }
 
 .cancel-comment-button {
@@ -15,13 +17,16 @@
    font-size: 17px;
    margin: 5px;
   border: 1px solid rgb(255, 217, 0);
+  border-radius: 5px;
 }
 .cancel-comment-button:hover{
-  color:white
+  color:white;
+  cursor: pointer;
 }
 
 .add-comment-input {
   margin-bottom: 10px;
+  background-color:rgba(0, 0, 0, 0.397);
 }
 .comment-container-space {
   padding-bottom: 70px;
