--- a/frontend/src/components/DemoUser/DemoUser.css
+++ b/frontend/src/components/DemoUser/DemoUser.css
@@ -2,10 +2,11 @@
     color: rgb(255, 217, 0);
     background-color: black;
     font-size: 20px;
-    border-radius: 10%;
+    border-radius: 5px;
     outline: 2px solid rgb(255, 217, 0);
     margin-left: 10px;
 }
 .demo-button:hover {
-    color: white
+    color: white;
+    cursor: pointer;
 }
