--- a/frontend/src/components/PhotoDetails/PhotoDetails.css
+++ b/frontend/src/components/PhotoDetails/PhotoDetails.css
@@ -11,14 +11,15 @@ h1 {
  justify-content: center;
  margin-bottom: 20px;
  color: rgb(255, 217, 0);
- text-shadow: -2px 0 black,0 2px black,2px 0 black,0 -2px black;
- ;
+ /* text-shadow: -2px 0 black,0 2px black,2px 0 black,0 -2px black;
+ ; */
 }
 .photo-image {
  width:70vw;
  display:flex;
  justify-content: center;
  /* border-radius: 5%; */
+   border-radius: 5px;
  border: 1px solid rgb(255, 217, 0);
  box-shadow: 10px 8px 8px black;
 }
@@ -33,7 +34,7 @@ h1 {
  font-size:17px;
  justify-content: space-between;
  color: rgb(255, 217, 0);
- text-shadow: -1.5px 0 black,0 1.5px black,1.5px 0 black,0 -1.5px black;
+ /* text-shadow: -1.5px 0 black,0 1.5px black,1.5px 0 black,0 -1.5px black; */
 }
 
 .photo-delete-button{
@@ -41,10 +42,12 @@ h1 {
  background-color: black;
  font-size: 17px;
  margin-left:5px;
- border: 1px solid rgb(255, 217, 0)
+ border: 1px solid rgb(255, 217, 0);
+border-radius: 5px;
 }
 .photo-delete-button:hover {
-   color:white
+   color:white;
+   cursor: pointer;
 }
 
 .comments-container {
@@ -61,7 +64,8 @@ h1 {
    display:flex;
    flex-direction: column;
    align-items: center;
-   border: 2px solid rgb(255, 217, 0);
+   border: 1.5px solid rgb(255, 217, 0);
+   border-radius: 5px;
    width: 70vw;
    /* margin-bottom:300px; */
 }
@@ -69,10 +73,11 @@ h1 {
    color: rgb(255, 217, 0);
    font-size: 30px;
    font-weight: bolder;
-   text-shadow: -2px 0 black,
+   margin:.5em 0 0 0;
+   /* text-shadow: -2px 0 black,
    0 2px black,
    2px 0 black,
-   0 -2px black;
+   0 -2px black; */
 }
 
 .comments-box {
@@ -82,6 +87,7 @@ h1 {
  align-items: center;
  /* border: 2px solid rgb(255, 217, 0); */
  width: 70vw;
+
  
 }
 .all-comments {
@@ -91,7 +97,9 @@ h1 {
  font-size: 20px;
  border: 1px solid rgb(255, 217, 0);
  background-color: rgba(0, 0, 0, 0.397);
- margin:20px
+border-radius: 5px;
+ margin:20px;
+ /* padding:0 20px 0 20px; */
 
 }
 
@@ -99,27 +107,31 @@ h1 {
 display: flex;
 align-items:center;
 justify-content: flex-end;
+margin: 0 .5em .5em .5em;
+border-radius: 5px;
 }
-.edit-delete-comment:hover {
+/* .edit-delete-comment:hover {
 
-}
+} */
 .comments-list {
  display:flex;
  font-size: 20px;
  color:white;
-text-shadow: -0.5px 0 black,
+ margin: 0 1em .5em 1em;
+/* text-shadow: -0.5px 0 black,
 0 0.5px rgb(255, 217, 0) ,
 0.5px 0 rgb(255, 217, 0),
-0 -0.5px rgb(255, 217, 0);
+0 -0.5px rgb(255, 217, 0); */
 
 }
 .comment-username {
  font-size: 20px;
  color: rgb(255, 217, 0);
- text-shadow: -2px 0 black,
+ margin:.5em 1em 0 1em;
+ /* text-shadow: -2px 0 black,
  0 2px black,
  2px 0 black,
- 0 -2px black;
+ 0 -2px black; */
 }
 
 .add-comment-input {
@@ -137,7 +149,9 @@ color: rgb(255, 217, 0);
 background-color: black;
 font-size: 17px;
 margin-left: 5px;
+border-radius: 5px;
 }
 .comment-button-delete:hover{
    color: white;
+   cursor: pointer;
 }
