--- a/frontend/src/components/SignupFormModal/SignupForm.css
+++ b/frontend/src/components/SignupFormModal/SignupForm.css
@@ -9,32 +9,21 @@ font-size: 18px;
 font-weight: bolder;
 background-color: black;
 color: rgb(255, 217, 0);
-border-radius: 10%;
-outline: 2px solid rgb(255, 217, 0);
+border-radius: 2px;
+outline: 1px solid rgb(255, 217, 0);
+padding:0 .75em 0 .75em;
 }
 .sign-up-button:hover {
 color: white;
+cursor: pointer;
 }
 
-h2 {
-display: flex;
-font-size:50px;
-justify-content: center;
-color: rgb(255, 217, 0);
-text-shadow: -3px 0 black,
-0 3px black,
-3px 0 black,
-0 -3px black;
-}
-h5 {
-display: flex;
-font-size:25px;
-justify-content: center;
-color: rgb(255, 217, 0);
-text-shadow: -2px 0 black,
-0 2px black,
-2px 0 black,
-0 2px black;
+.signup-header {
+    display:flex;
+    justify-content: center;
+    color:rgb(255, 217, 0);
+    margin-bottom: 10px;
+    font-size: 2.5em;
 }
 
 .signup-btn-container{
@@ -47,12 +36,13 @@ font-size: 18px;
 font-weight: bolder;
 background-color: black;
 color: rgb(255, 217, 0);
-border-radius: 10%;
+border-radius: 5px;
 outline: 2px solid rgb(255, 217, 0);
 align-items: center;
 margin-top: 10px;
 }
 
 .signup-btn-subtmit:hover {
-    color:white
+    color:white;
+    cursor: pointer;
 }
