--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -28,20 +28,19 @@
 cursor: pointer;
 }
 
-.builds {
+.explore {
  text-decoration: none;
  color: rgb(255, 217, 0);
  display: flex;
- padding:10px;
+ padding:8px;
+ align-items: center;
  padding-left: 40px;
- font-size: 25px;
+ font-size: 1.5em;
  font-weight: bolder;
- text-shadow: -2px 0 black,
- 0 2px black,
- 2px 0 black,
- 0 -2px black;
+
+
 }
-.builds:hover {
+.explore:hover {
  color: white;
 cursor: pointer;
 }
@@ -62,7 +61,9 @@ cursor: pointer;
  width:100%;
 }
 
-
+.nav-left {
+   display:flex;
+}
 .nav-links {
  display:flex;
  margin-left: -15px;
@@ -174,6 +175,7 @@ cursor:pointer;
 }
 .search-results li  {
    list-style-type: none;
+   margin-left: -30px;
 }
 
 .search-results-none {
