--- a/frontend/src/components/PhotoUploadModal/PhotoUpload.css
+++ b/frontend/src/components/PhotoUploadModal/PhotoUpload.css
@@ -1,14 +1,11 @@
 .upload-button {
  display:flex;
- margin-left: 30px;
+ margin-right:1em;
  font-size: 30px;
  align-items: center;
  padding-bottom: 3px;
  color:rgb(255, 217, 0);
- text-shadow: -2px 0 black,
- 0 2px black,
- 2px 0 black,
- 0 -2px black;
+
 }
 .upload-button:hover {
 color:white;
