--- a/frontend/src/components/LandingPage/LandingPage.css
+++ b/frontend/src/components/LandingPage/LandingPage.css
@@ -35,6 +35,7 @@
   border-radius: 5px;
   border:unset;
   font-weight: 600;
+  background-color: rgb(255, 217, 0);
   /* color: rgb(255,217,0) */
 }
 .splash-signup:hover {
