--- a/frontend/src/components/PhotosPage/PhotosPage.css
+++ b/frontend/src/components/PhotosPage/PhotosPage.css
@@ -63,4 +63,6 @@ padding-top: 70px;
  0 -1px rgb(255, 217, 0); */
 }
 
-body {background-color: rgb(47, 47, 65);}
+body {
+   background-color: rgb(47, 47, 65);
+}
