--- a/frontend/src/components/PhotoDetails/PhotoDetails.css
+++ b/frontend/src/components/PhotoDetails/PhotoDetails.css
@@ -11,8 +11,8 @@ h1 {
  justify-content: center;
  margin-bottom: 20px;
  color: rgb(255, 217, 0);
- /* text-shadow: -2px 0 black,0 2px black,2px 0 black,0 -2px black;
- ; */
+ text-shadow: 8px 8px 8px black
+
 }
 .photo-image {
  width:70vw;
