--- a/frontend/src/components/PhotoUploadModal/PhotoUpload.css
+++ b/frontend/src/components/PhotoUploadModal/PhotoUpload.css
@@ -22,13 +22,15 @@ cursor:pointer
  width: 500px;
  /* height: 350px; */
  background-color: rgb(47, 47, 65);
- border: 2px solid rgb(255, 217, 0)
+ border: 2px solid rgb(255, 217, 0);
+ border-radius:5px;
 
 }
 .title {
 color:rgb(255, 217, 0);
 font-size: 30px;
  padding-bottom: 10px;
+text-shadow: 8px 8px 10px black
 }
 
 .add-photo-form{
@@ -81,4 +83,5 @@ cursor: pointer;
 .choose-file {
 /* margin-left:100px; */
 font-size: 17px;
+width: 245px;
 }
