--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -104,10 +104,11 @@ cursor: pointer;
 .profile-dropdown {
  width: 175px;
  color: rgb(255, 217, 0);
- margin-top: 120px;
- margin-right: 20px;
+ margin-top: .6em;
+ right: 1%;
  border: 1px solid rgb(255, 217, 0);
  background-color: rgb(0, 0, 0);
+ position:fixed;
  list-style: none;
  
 }
@@ -173,9 +174,18 @@ cursor:pointer;
    border-radius: 10px;
    list-style-type: none
 }
+.search-results-image {
+   height: 30px;
+   width:50px;
+   object-fit: cover;
+   margin-right: 1em;
+}
+.search-pic-name {
+   display: flex;
+}
 .search-results li  {
    list-style-type: none;
-   margin-left: -30px;
+   /* margin-left: -30px; */
 }
 
 .search-results-none {
