--- a/frontend/src/components/PhotoDetails/PhotoDetails.css
+++ b/frontend/src/components/PhotoDetails/PhotoDetails.css
@@ -32,6 +32,7 @@ h1 {
  margin-top: 20px;
  display: flex;
  font-size:17px;
+ font-weight:450;
  justify-content: space-between;
  color: rgb(255, 217, 0);
  /* text-shadow: -1.5px 0 black,0 1.5px black,1.5px 0 black,0 -1.5px black; */
