--- a/frontend/src/components/UserProfile/UserProfile.css
+++ b/frontend/src/components/UserProfile/UserProfile.css
@@ -1,3 +1,36 @@
 .user-profile-container {
-   margin-top: 5em;
+   margin-top: 3em;
+   margin-bottom: 1000px;
+}
+.top-div {
+   background-image: url('../../images/forest.jpg');
+   width:100%;
+   height:200px;
+}
+.profile-image {
+   width:100%;
+   height:200px;
+}
+.top-div-info {
+   color: rgb(255, 217, 0);
+   font-size: 2em;
+   padding-top: 3em;
+   margin-left: 3em;
+}
+.filtered-user-photos {
+   width:400px;
+   height:250px;
+   object-fit: cover;
+
+}
+.filtered-photos-container {
+   /* display:inline-flex; */
+   margin: .1em .2em .1em .2em;
+}
+.user-photos-container {
+   display:flex;
+   flex-wrap:wrap;
+   margin: 3em 2em 0 2em;
+   justify-content: center;
+   padding-bottom: 100px;
 }
