--- a/frontend/src/components/UserProfile/UserProfile.css
+++ b/frontend/src/components/UserProfile/UserProfile.css
@@ -21,6 +21,7 @@
    width:400px;
    height:250px;
    object-fit: cover;
+   /* border: 1px solid black; */
 
 }
 .filtered-photos-container {
@@ -33,4 +34,32 @@
    margin: 3em 2em 0 2em;
    justify-content: center;
    padding-bottom: 100px;
+}
+
+.filtered-caption-layer {
+visibility:hidden;
+display: flex;
+/* align-items: center; */
+/* justify-content: center; */
+flex-direction: column;
+transition: opacity .2s, 
+}
+
+.filtered-photos-container:hover .filtered-caption-layer {
+   visibility: visible;
+   opacity: 1;
+}
+
+.filtered-caption {
+
+   transform: translateY(-3.5em);
+   margin-left: 1em;
+   color:rgb(255, 217, 0);
+}
+.filtered-name {
+
+   transform: translateY(-4em);
+   color: rgb(255, 217, 0);
+   margin-left: 1.5em;
+   font-size:.75em
 }
