--- a/frontend/src/components/PhotosPage/PhotosPage.css
+++ b/frontend/src/components/PhotosPage/PhotosPage.css
@@ -1,5 +1,6 @@
 .photos-container {
 /* width:100vw */
+padding-bottom: 5em;
 }
 
 .photo-card {
@@ -8,6 +9,7 @@
  flex-direction: row;
  justify-content: center; 
  align-items: center;
+ margin-top: 5em;
 }
 
 .photo-url {
@@ -25,42 +27,59 @@ box-shadow: 10px 5px 5px black;
 width: 300px;
 height:300px;
 }
-.photo-words {
-   margin-top:.25em;
-}
 
 .photoId {
-display: flex;
-flex-direction: column;
-align-items: center;
-text-decoration: none;
-color: rgb(255, 217, 0);
-/* text-shadow: -2px 0 black,
-0 2px black,
-2px 0 black,
-0 -2px black; */
-
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+   text-decoration: none;
+   color: rgb(255, 217, 0);
+   /* text-shadow: -2px 0 black,
+   0 2px black,
+   2px 0 black,
+   0 -2px black; */
 }
-
 .photos {
-display: flex;
-flex-direction: column;
-padding: 50px;
-align-items: center;
-padding-top: 70px;
-/* max-width: 400; */
+   display: flex;
+   flex-direction: column;
+   padding: 2em;
+   align-items: center;
+   /* padding-top: 70px; */
+   /* max-width: 400; */
 }
 
 .photo-content {
- font-size: 25px;
+   /* font-size: 25px; */
+   visibility: hidden;
+   display: flex;
+   flex-direction: column;
+   transition: opacity .2s,
+}
+
+.photos:hover .photo-content{
+   visibility: visible;
+   opacity: 1;
+ 
+}
+
+.photo-words {
+   transform: translateY(-3.5em);
+   margin-left: 1em;
+   color: rgb(255, 217, 0);
+   font-weight: 700;
+   text-shadow: .1px .1px  black;
+   
 }
 .userName {
- font-size: 20px;
- color:white;
- /* text-shadow: -1px 0 rgb(255, 217, 0),
- 0 1px rgb(255, 217, 0),
- 1px 0 rgb(255, 217, 0),
- 0 -1px rgb(255, 217, 0); */
+   transform: translateY(-3.5em);
+   margin-left: 1.5em;
+   margin-top:-.5em;
+   color: rgb(255, 217, 0);
+   font-size: .75em;
+   font-weight: 800;
+   text-shadow: .1px .1px  black
+   /* background-color: black; */
+
 }
 
 body {
