--- a/frontend/src/components/UserProfile/UserProfile.css
+++ b/frontend/src/components/UserProfile/UserProfile.css
@@ -6,6 +6,15 @@
    background-image: url('../../images/forest.jpg');
    width:100%;
    height:200px;
+   
+}
+.top-div-info {
+   display:flex;
+   justify-content: space-between;
+   
+}
+.top-div-right {
+   margin-right:2em
 }
 .profile-image {
    width:100%;
